# duelingbook-extractor

./: Cargo.toml
src/: config.rs  lib.rs  main.rs
src/cli/: cli.rs  exec.rs  mod.rs  options.rs
src/extractor/: deserialise.rs  export.rs  fetch.rs  mod.rs
src/types/: card.rs  card_data.rs  deck_data.rs  mod.rs  monster_card.rs
src/types/db/: card_data.rs  deck_data.rs  mod.rs
src/types/norm/: card.rs  deck.rs  mod.rs  monster_card.rs  spell_card.rs  trap_card.rs
tests/: mod.rs
tests/conversions/: monster_card.rs
